# PloverAI

./: .gitignore  CITATIONS.bib  LICENSE  README.md
.github/workflows/: tests.yml
deploy/: bootstrap.sh  frontend.env.local.example  nginx.conf.template  pipeline.env.example  ploverai-api.service.template  update.sh
docs/specs/: response-reduction-strategy-b.md
frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatShell.tsx  GraphView.tsx  JsonView.tsx  MaintenancePage.tsx  MarkdownAnswer.tsx  ModelDropdown.tsx  QuestionsDropdown.tsx  ResultPanel.tsx  Sidebar.tsx  StructuredAnswer.tsx  ThemeSwitch.tsx
frontend/src/lib/: api.ts  export.ts  guest.ts  linkify.ts  theme.ts
pipeline/: .env.example  .gitignore  README.md  __init__.py  config.yaml  pyproject.toml  requirements.txt
pipeline/benchmark/: README.md  known_issues.md
pipeline/benchmark/golden_questions/: README.md
pipeline/benchmark/golden_questions/evidence/: q1.json  q10.json  q2.json  q3.json  q4.json  q5.json  q6.json  q7.json  q8.json  q9.json
pipeline/benchmark/golden_questions/irrelevant/: README.md  irrelevant_q1.json  irrelevant_q10.json  irrelevant_q2.json  irrelevant_q3.json  irrelevant_q4.json  irrelevant_q5.json  irrelevant_q6.json  irrelevant_q7.json  irrelevant_q8.json  irrelevant_q9.json
pipeline/code/: README.md  __init__.py  api.py  config.py  cost.py  golden_eval.py  http_retry.py  logging_setup.py  nameres_client.py  nodenorm_client.py  openrouter_client.py  pipeline.py  plover_client.py  prompts.py  pubtator_client.py  reduction.py  runner.py  trace.py  trapi_validator.py
pipeline/code/tests/: test_answer_graph_view.py  test_chunking.py  test_consistency_check.py  test_enrich_edges_pubtator.py  test_extract_json.py  test_http_retry.py  test_iterative_answer_pick.py  test_load_questions.py  test_parse_scope_check.py  test_parse_stage0.py  test_pubtator_parser.py  test_pubtator_verified_rate.py  test_query_arity.py  test_rerank_coverage_tier.py  test_response_reduction.py  test_smoke.py
pipeline/ploverai/: README.md  __init__.py  api.py  biolink_helper.py  config.py  logging_setup.py  nodenorm_client.py  prompts.py  runner.py
pipeline/ploverai/tests/: test_answer_graph_view.py  test_consistency_check.py  test_enrich_edges_pubtator.py  test_extract_json.py  test_parse_scope_check.py  test_parse_stage0.py  test_pubtator_parser.py  test_pubtator_verified_rate.py  test_smoke.py
